YRMT-44: Fixed header spacing

--- a/docroot/style-guide-rmt/css/styles.css
+++ b/docroot/style-guide-rmt/css/styles.css
@@ -475,8 +475,8 @@ a img {
 /* style component header */
 .header-wrapper {
   margin: 0 auto;
-  min-width: 65%;
   max-width: 600px;
+  min-width: 65%;
   padding-bottom: 28px;
   padding-top: 33px;
   padding-left: 10px;
@@ -500,9 +500,9 @@ a img {
     padding: 0; }
   .header-wrapper .site-logo {
     padding-right: 0; }
-  .header-wrapper .main-menu td,
-  .header-wrapper .site-name {
-    padding: 0 30px; }
+  .header-wrapper .main-menu {
+    vertical-align: bottom;
+    text-align: right; }
 
 .header__item {
   padding: 10px 0;
